<resources>
    <string name="app_name">ModularStudent</string>
    <string name="title_files">Files</string>
    <string name="title_links">Links</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text_open_file">OPEN</string>
    <string name="button_label_change_class">CHANGE CLASS</string>
    <string name="button_label_sign_out">SIGN OUT</string>
    <string name="button_label_change_school">CHANGE SCHOOL</string>
    <string name="label_your_email">Your Email</string>
    <string name="label_your_class">Your Class</string>
</resources>